assets/css/styles.css
/* ... */
/*
Add the correct vertical alignment in Chrome and Firefox.
*/

progress {
  vertical-align: baseline;
}

/*
Correct the cursor style of increment and decrement buttons in Safari.
*/

::-webkit-inner-spin-button,
::-webkit-outer-spin-button {
  height: auto;
}

/*
1. Correct the odd appearance in Chrome and Safari.
2. Correct the outline style in Safari.
*/

[type='search'] {
  -webkit-appearance: textfield;
  /* 1 */
  outline-offset: -2px;
  /* 2 */
}

/*
Remove the inner padding in Chrome and Safari on macOS.
*/

::-webkit-search-decoration {
  -webkit-appearance: none;
}

/*
1. Correct the inability to style clickable types in iOS and Safari.
2. Change font properties to `inherit` in Safari.
*/

::-webkit-file-upload-button {
  -webkit-appearance: button;
  /* 1 */
  font: inherit;
  /* 2 */
}

/*
Add the correct display in Chrome and Safari.
*/

summary {
  display: list-item;
}

/*
Removes the default spacing and border for appropriate elements.
*/

blockquote,
dl,
dd,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
figure,
p,
pre {
  margin: 0;
}

fieldset {
  margin: 0;
  padding: 0;
}

legend {
  padding: 0;
}

ol,
ul,
menu {
  list-style: none;
  margin: 0;
  padding: 0;
}

/*
Reset default styling for dialogs.
*/

dialog {
  padding: 0;
}

/*
Prevent resizing textareas horizontally by default.
*/

textarea {
  resize: vertical;
}

/*
1. Reset the default placeholder opacity in Firefox. (https://github.com/tailwindlabs/tailwindcss/issues/3300)
2. Set the default placeholder color to the user's configured gray 400 color.
*/

input::-moz-placeholder, textarea::-moz-placeholder {
  opacity: 1;
  /* 1 */
  color: #9ca3af;
  /* 2 */
}

input::placeholder,
textarea::placeholder {
  opacity: 1;
  /* 1 */
  color: #9ca3af;
  /* 2 */
}

/*
Set the default cursor for buttons.
*/

button,
[role="button"] {
  cursor: pointer;
}

/*
Make sure disabled buttons don't get the pointer cursor.
*/

:disabled {
  cursor: default;
}

/*
1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
   This can trigger a poorly considered lint error in some tools but is included by design.
*/

img,
svg,
video,
canvas,
audio,
iframe,
embed,
object {
  display: block;
  /* 1 */
  vertical-align: middle;
  /* 2 */
}

/*
Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
*/

img,
video {
  max-width: 100%;
  height: auto;
}

/* Make elements with the HTML hidden attribute stay hidden by default */

[hidden]:where(:not([hidden="until-found"])) {
  display: none;
}

body {
  font-size: clamp(1rem, 1.5625vw, 1.25rem);
}

h1, .h1 {
  font-family: "Press Start 2P";
  font-weight: 500;
  font-size: clamp(2rem, 3.75vw, 3rem);
  line-height: 1.1;
}

h2, .h2 {
  font-family: "Press Start 2P";
  font-weight: 500;
  font-size: clamp(1.5rem, 2.8125vw, 2.25rem);
  line-height: 1.15;
}

h3, .h3 {
  font-family: "Press Start 2P";
  font-weight: 500;
  font-size: clamp(1.25rem, 2.5vw, 2rem);
  line-height: 1.2;
}

h4, .h4 {
  font-family: "Press Start 2P";
  font-weight: 400;
  font-size: clamp(1.125rem, 1.875vw, 1.5rem);
  line-height: 1.2;
}

h5, .h5 {
  font-family: "Press Start 2P";
  font-weight: 700;
  line-height: 1.2;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.pointer-events-none {
  pointer-events: none;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.sticky {
  position: sticky;
}

.inset-0 {
  inset: 0px;
}

.-bottom-\[240px\] {
  bottom: -240px;
}

.-bottom-\[300px\] {
  bottom: -300px;
}

.-bottom-\[440px\] {
  bottom: -440px;
}

.-left-\[200px\] {
  left: -200px;
}

.-left-\[240px\] {
  left: -240px;
}

.-top-\[260px\] {
  top: -260px;
}

.-top-\[300px\] {
  top: -300px;
}

.-top-\[500px\] {
  top: -500px;
}

.-top-\[68px\] {
  top: -68px;
}

.bottom-0 {
  bottom: 0px;
}

.bottom-20 {
  bottom: 5rem;
}

.bottom-\[20\%\] {
  bottom: 20%;
}

.left-0 {
  left: 0px;
}

.left-\[100px\] {
  left: 100px;
}

.left-\[1200px\] {
  left: 1200px;
}

.left-\[240px\] {
  left: 240px;
}

.left-\[960px\] {
  left: 960px;
}

.right-0 {
  right: 0px;
}

.right-20 {
  right: 5rem;
}

.right-5 {
  right: 1.25rem;
}

.top-0 {
  top: 0px;
}

.-z-10 {
  z-index: -10;
}

.z-0 {
  z-index: 0;
}

.z-10 {
  z-index: 10;
}

.z-50 {
  z-index: 50;
}

.col-span-1 {
  grid-column: span 1 / span 1;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.-mt-40 {
  margin-top: -10rem;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.mb-20 {
  margin-bottom: 5rem;
}

.mb-3 {
  margin-bottom: 0.75rem;
}

.mb-3\.5 {
  margin-bottom: 0.875rem;
}

.mb-40 {
  margin-bottom: 10rem;
}

.mb-5 {
  margin-bottom: 1.25rem;
}

.mb-7 {
  margin-bottom: 1.75rem;
}

.ml-1 {
  margin-left: 0.25rem;
}

.ml-2 {
  margin-left: 0.5rem;
}

.ml-3 {
  margin-left: 0.75rem;
}

.ml-5 {
  margin-left: 1.25rem;
}

.ml-auto {
  margin-left: auto;
}

.mr-12 {
  margin-right: 3rem;
}

.mr-16 {
  margin-right: 4rem;
}

.mr-3 {
  margin-right: 0.75rem;
}

.mr-4 {
  margin-right: 1rem;
}

.mt-1\.5 {
  margin-top: 0.375rem;
}

.mt-3 {
  margin-top: 0.75rem;
}

.mt-40 {
  margin-top: 10rem;
}

.mt-\[-11px\] {
  margin-top: -11px;
}

.block {
  display: block;
}

.flex {
  display: flex;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.aspect-\[5\/3\] {
  aspect-ratio: 5/3;
}

.h-8 {
  height: 2rem;
}

.h-\[267px\] {
  height: 267px;
}

.h-\[276px\] {
  height: 276px;
}

.h-\[388px\] {
  height: 388px;
}

.h-\[492px\] {
  height: 492px;
}

.h-full {
  height: 100%;
}

.h-screen {
  height: 100vh;
}

.w-8 {
  width: 2rem;
}

.w-\[1192px\] {
  width: 1192px;
}

.w-\[1758px\] {
  width: 1758px;
}
/* ... */

